--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="container  mx-auto  px-[16px] ">
         <div class="wrap flex md:gap-[40px] gap-[16px] items-center">
           <button class="md:hidden block text-[18px] text-textdark"><i class="fa-solid fa-bars"></i></button>
-          <div class="logologo lg:flex-none flex-1"> <a class="font-[700] sm:text-[32px] text-[25px] leading-[40px]" href="#">28.SHOP</a></div>
+          <div class="logologo lg:flex-none flex-1"> <a class="font-[700] sm:text-[32px] text-[25px] leading-[40px]" href="#">CLOTHES.SHOP</a></div>
           <na class="md:block hidden ">
             <ul class="flex gap-[24px]">
               <li><a class="font-[400] text-[16px] leading-[20px]" href="#">Giới Thiệu</a></li>
@@ -249,7 +249,7 @@
         <div class="xl:flex block gap-x-[103px]  flex-wrap items-center border-b-[1px] border-[#0000001A] py-[48px]   ">
           <div class="xl:w-[20%] w-[100%] xl:mb-[0px] mb-[35px]">
             <div class=" "></div>
-            <h3 class="font-[700] text-[33px] leading-[42px] xl:text-left sm:text-center text-left "> 28.SHOP</h3>
+            <h3 class="font-[700] text-[33px] leading-[42px] xl:text-left sm:text-center text-left "> CLOTHES.SHOP</h3>
             <p class="font-[400] text-[14px] leading-[22px] text-[#00000099] sm:mt-[25px] mt-[20px] inline-block  xl:text-left sm:text-center text-left">
               Chúng tôi có những bộ quần áo phù hợp với phong cách của bạn và bạn có thể tự hào khi mặc.</p>
             <ul class="flex gap-[12px] mt-[35px] xl:justify-start sm:justify-center justifly-start ">
@@ -298,7 +298,7 @@
           </div>
         </div>
         <div class=" flex-wrap justify-between mt-[30px] pb-[81px] sm:flex block">
-          <div class="font-[400] text-[14px] leading-[17px] text-[#00000099] sm:block flex sm:justify-start justify-center  ">28.SHOP © 2024, All Rights Reserved</div>
+          <div class="font-[400] text-[14px] leading-[17px] text-[#00000099] sm:block flex sm:justify-start justify-center  ">CLOTHES.SHOP © 2025, All Rights Reserved</div>
           <div class="flex gap-x-[12px]  sm:justify-start justify-center sm:mt-[0px] mt-[20px]"><img class="h-[30px]" src="assets/Img/footer-bg-1.png" alt=""><img class="h-[30px]" src="assets/Img/footer-bg-2.png" alt=""><img class="h-[30px]" src="assets/Img/footer-bg-3.png" alt=""><img class="h-[30px]" src="assets/Img/footer-bg-4.png" alt=""><img class="h-[30px]" src="assets/Img/footer-bg-5.png" alt=""></div>
         </div>
       </div>
